# project_template

./: README.md  pyproject.toml
data/: data_template.json
scripts/: main_template.py
src/project_template/: __init__.py  library_template.py
tests/: test_template.py
